# CPP07_QT_Les09_Hw01

./: CMakeLists.txt  readme.md
headers/: mainwindow.h  udpworker.h
resources/: resources.qrc
source/: mainwindow.cpp  mainwindow.ui  udpworker.cpp
